# biter

./: Cargo.toml  README.md  \  flake.nix  system_clipboard.rs  todo.md
src/: main.rs  memclip.rs  sync.rs  system_clip.rs  system_clipboard.rs
