[package]
name = "biter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
copypasta = "0.10.0"
inquire = "0.6.2"
iroh = "0.12.0"
rand = "0.8.5"
tokio = "1.35.1"
tokio-util = "0.7.10"
twox-hash = "1.6.3"
