[package]
name = "biter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
copypasta = "0.10.0"
env_logger = "0.11.1"
inquire = "0.6.2"
iroh = "0.12.0"
log = "0.4.20"
quic-rpc = "0.6.1"
rand = "0.8.5"
tokio = "1.35.1"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
twox-hash = "1.6.3"
